header is now responsive, added invisible container same size as header__head (position:fixed), to make the layout easier to adjust, header's image was wrapped with a div

--- a/Css/header.css
+++ b/Css/header.css
@@ -13,9 +13,18 @@
 
 
 .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: linear-gradient(320deg, white, rgb(194, 236, 194));
     width: 100%;
-    height: 85vh;
+    height: 90vh;
+}
+
+.header__invis__cont {
+    width: 100%;
+    max-height: 100px;
+    height: 10vh;
 }
 
 .header__head {
@@ -27,6 +36,7 @@
     align-items: center;
     width: 100%;
     height: 10vh;
+    max-height: 100px;
     background: linear-gradient(90deg, white, rgb(194, 236, 194));
 
 }
@@ -72,11 +82,7 @@
 
 }
 
-@media (max-width: 430px) {
-    .header{
-        height: 120vh;
-    }
-    
+@media (max-width: 610px) {
     .header__nav {
         /* display: none; */
         position: absolute;
@@ -119,6 +125,10 @@
         position: relative;
         top: -6px;
     }
+
+    .header__main {
+        flex-direction: column;
+    }
 }
 
 
@@ -132,25 +142,27 @@
     /* flex-direction: column; */
     align-items: center;
     justify-content: space-around;
-    height: 90%;
+    /* height: 90%; */
+    max-width: 1050px;
+    margin: auto;
+
 }
+
 
 .header__body {
     display: flex;
-    /* align-content: center; */
     flex-direction: column;
     justify-content: center;
-    gap: 5%;
-    height: 90%;
-    width: fit-content;
-    max-width: 1000px;
-    /* margin: auto; */
+    gap: 35px;
+    width: 40%;
+}
+.header__img__cont {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.header__img {
-    width: 30%;
-    aspect-ratio: 1/1;
-}
 
 .header__vernagir {
     color: var(--text-color);
@@ -161,6 +173,7 @@
 }
 
 .header__buttons__quote {
+    box-sizing: border-box;
     padding: 10px 36px;
     background-color: var(--primary-color);
     color: aliceblue;
@@ -169,6 +182,7 @@
 }
 
 .header__buttons__learn {
+    box-sizing: border-box;
     padding: 10px 36px;
     background: none;
     border: 1px solid var(--secondary-color-1);
@@ -176,26 +190,30 @@
     color: var(--secondary-color-1);
 }
 
+@media (max-width: 610px) {
+    .header__body {
+        width: 60%;
+        align-items: center;
+    }
+    .header__img__cont{
+        width: 50%;
+    }
+}
+
 @media (max-width: 430px) {
-    .link {
-        font-size: 16px;
-    }
-    .header {
-        height: 120vh;
-    }
     
     .header__main {
         height: 80%;
         flex-direction: column;
-        align-items: space-around;
+        align-items: center;
         justify-content: space-evenly;
     }
-
     .header__body {
-        justify-content: flex-end;
+        width: 70%;
     }
 
     .header__buttons {
+        width: 100%;
         display: flex;
         justify-content: space-around;
     }
@@ -207,9 +225,4 @@
     .header__buttons__learn {
         padding: 6px 23px;
     }
-
-    .header__img {
-        width: 70%;
-    }
-
 }
