--- a/Css/textStyles.css
+++ b/Css/textStyles.css
@@ -100,30 +100,123 @@ h6 {
 
 }
 
-@media (max-width: 430px) {
-    /* h1 {
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 57px;
+
+/* Adjustments for 1069px */
+@media (max-width: 1069px) {
+    h1 {
+        font-size: 48px;
+        line-height: 70px;
     }
+
     h2 {
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 32px;
-    } */
-    /* h3 {
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 30px;
-    } */
-    /* h4 {
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 24px;
+        font-size: 36px;
+        line-height: 50px;
     }
+
+    h3 {
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+    h4 {
+        font-size: 18px;
+        line-height: 26px;
+    }
+
     h5 {
         font-size: 14px;
-        font-weight: 700;
+        line-height: 20px;
+    }
+
+    h6 {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .btn-text,
+    .paragraph,
+    .link {
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
+
+/* Adjustments for Tablets (max-width: 768px) */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 40px;
+        line-height: 60px;
+    }
+
+    h2 {
+        font-size: 32px;
+        line-height: 46px;
+    }
+
+    h3 {
+        font-size: 18px;
         line-height: 24px;
-    } */
+    }
+
+    h4 {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    h5 {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    h6 {
+        font-size: 10px;
+        line-height: 16px;
+    }
+
+    .btn-text,
+    .paragraph,
+    .link {
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
+
+/* Adjustments for Mobile (max-width: 440px) */
+@media (max-width: 440px) {
+    h1 {
+        font-size: 32px;
+        line-height: 50px;
+    }
+
+    h2 {
+        font-size: 24px;
+        line-height: 36px;
+    }
+
+    h3 {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    h4 {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    h5 {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    h6 {
+        font-size: 10px;
+        line-height: 16px;
+    }
+
+    .btn-text,
+    .paragraph,
+    .link {
+        font-size: 10px;
+        line-height: 16px;
+    }
 }
